kube/rsvp-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsvp-db
spec:
  replicas: 1
  selector:
    matchLabels:
      appdb: rsvpdb
  template:
    metadata:
      labels:
        appdb: rsvpdb
    spec:
      nodeSelector:
        database: enabled
      containers:
      - name: rsvp-db
        image: mongo:3.3
        ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: rsvpdb
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    appdb: rsvpdb
