kube/rsvp-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsvp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsvp
  template:
    metadata:
      labels:
        app: rsvp
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchLabels:
                appdb: rsvpdb
      containers:
      - name: rsvp-app
        image: seungkyua/rsvpapp
#        image: teamcloudyuga/rsvpapp
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: web-port

---
apiVersion: v1
kind: Service
metadata:
  name: rsvp
  labels:
    app: rsvp
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: web-port
    protocol: TCP
    nodePort: 31200
  selector:
    app: rsvp
